# games101-homework

./: .gitignore  README.md
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/: CMakeLists.txt  main.cpp
Assignment2/src/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment4/code/: CMakeLists.txt  main.cpp
Assignment5/Code/: Renderer.cpp  Triangle.hpp
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  Triangle.hpp  Vector.hpp
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp
Assignment8/: CMakeLists.txt
Assignment8/CGL/: CMakeLists.txt
Assignment8/src/: CMakeLists.txt  rope.cpp
